--- a/README
+++ b/README
@@ -17,11 +17,12 @@ The following **required** functionality is completed:
 
 <div>
     <a href="https://www.loom.com/share/5988e0467dd944fabaae865dca026f12">
+      <p>Prework - IOS101 | Intro to iOS Development | CodePath Courses - 31 December 2023 - Watch Video</p>
     </a>
     <a href="https://www.loom.com/share/5988e0467dd944fabaae865dca026f12">
       <img style="max-width:300px;" src="https://cdn.loom.com/sessions/thumbnails/5988e0467dd944fabaae865dca026f12-with-play.gif">
     </a>
-  </div>
+</div>
 
 ## App Brainstorming (Step 4)
 - Discord
